Project

General

Profile

Actions

Bug #16894

closed

multisite: metadata master can get the wrong value for 'oldest_log_period'

Added by Casey Bodley over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When the metadata master starts up, it goes backwards through its per-period metadata logs until it finds a period with no log shards (stat returns ENOENT on all shards). It returns the period after that as it's oldest_log_period, and other zones start their sync at that point.

But it's possible and likely that intermediate periods only introduce realm configuration changes, and don't have any associated changes in the metadata log. So we'll skip past any logs that came before that, and advertise the wrong oldest_log_period to our peers.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17512: jewel: multisite: metadata master can get the wrong value for 'oldest_log_period'ResolvedLoïc DacharyActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Yehuda Sadeh over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17512: jewel: multisite: metadata master can get the wrong value for 'oldest_log_period' added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF