rgw: store oldest mdlog period in rados

RGWMetadataManager no longer makes stat calls on logs shards to
determine its oldest_log_period. Instead, it records the oldest log's
period id and realm_epoch in a rados object. If
RGWMetadataManager::init_oldest_log_period() finds no such object, it
calls find_oldest_period() to read period predecessors until it reaches
the realm's first period, and writes that to rados.

RGWMetadataManager::init_oldest_log_period() is now only called from
RGWRados::init_complete() if run_sync_threads is true, instead of
running unconditionally in RGWMetadataManager::init(), which allows us
to skip building up a period history for radosgw-admin.

Now that RGWMetadataManager::read_oldest_log_period() can return ENOENT
for an uninitialized mdlog history, RGWRemoteMetaLog::run_sync() will
retry on ENOENT as well.

Fixes: http://tracker.ceph.com/issues/16894

Signed-off-by: Casey Bodley <cbodley@redhat.com>